updated Dockerfile